# TensorBases

./: .gitignore  CMakeLists.txt  PacletInfo.m  README.md  TensorBases.m  TensorBases.nb  TensorBasesInstaller.m  TensorBasesInstaller.nb  make_zip.sh
bases/: AA.m  AA.nb  AAA.m  AAA.nb  AAAA.m  AAAA.nb  AAAA2.m  AAAA2.nb  AAAAClass.m  AAAAClass.nb  AAAAClassTrans.m  AAAAClassTrans.nb  AAAClass.m  AAAClass.nb  AAAClassTrans.m  AAAClassTrans.nb  AAAOrtho.m  AAAOrtho.nb  AAAOrtho_construction.m  Acbc.m  Acbc.nb  Aqbq.nb  AqbqDirect.m  AqbqDirect.nb  AqbqDirectOpt.m  AqbqDirectOpt.nb  AqbqDirectSF.m  AqbqDirectSF.nb  AqbqOpt.m  AqbqOpt.nb  AqbqSimple.m  AqbqSimple.nb  FierzCompleteNf2Nc34D.m  FierzCompleteNf2Nc34D.nb  FierzCompleteNf2Nc3NJL.m  FierzCompleteNf2Nc3NJL.nb  FierzCompleteNf2Nc3Pheno.m  FierzCompleteNf2Nc3Pheno.nb  FierzCompleteNf2p1Nc3.m  FierzCompleteNf2p1Nc3.nb  (+17 more)
bases/utils/: four_fermi_tensors.m  four_fermi_tensors.nb
cache/AA/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/AAA/: inverseMetric.m  metric.m  projectors.m  vertices.m
cache/AAA2/: metric.m  vertices.m
cache/AAAA/: inverseMetric.m  metric.m  projectors.m  vertices.m
cache/AAAA2/: inverseMetric.m  metric.m  projectors.m  vertices.m
cache/AAAAClass/: projectors.m  vertices.m
cache/AAAAClassTrans/: inverseMetric.m  metric.m  projectors.m  vertices.m
cache/AAAClass/: inverseMetric.m  projectors.m
cache/AAAClassTrans/: inverseMetric.m  metric.m  projectors.m  vertices.m
cache/AAAOrtho/: inverseMetric.m  metric.m  projectors.m  vertices.m
cache/Acbc/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/Aqbq/: basis.m  metric.m  vertices.m
cache/AqbqDirect/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/AqbqDirectOpt/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/AqbqDirectSF/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/AqbqOpt/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/AqbqSimple/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/FierzCompleteNf2Nc34D/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/FierzCompleteNf2Nc3NJL/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/FierzCompleteNf2Nc3Pheno/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/FierzCompleteNf2p1Nc3/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/FierzCompleteNf3Nc3/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/cbc/: basis.m  inverseMetric.m  metric.m  projectors.m
cache/qbq/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/qbqFT/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/qbqSF/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/qbqSFFT/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/transAAqbqMinimal/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
cache/transAAqbqMinimalSF/: basis.m  inverseMetric.m  metric.m  projectors.m  vertices.m
examples/: BasisBuilder.nb  MomentumSingularities.nb  Showcase.nb  showcase.nb  showcase_exporter.nb
modules/: AutoDefine.m  BasisConstruction.m  Defaults.m  FormTracerGroups.m  FormTracerLoad.m  Helpers.m  ImportExport.m  Internal.m  Kinematics.m  LoadBases.m  LorentzTensors.m  Registration.m  SelfUpdate.m  Tools.m  Transformations.m  Usage.m
tests/: Test.m  init.m
tests/Algebra/: MetricTests.m  ProjectorTests.m  PropagatorTests.m  TransformationTests.m
tests/Basics/: RegistryTests.m  SmokeTests.m  UnknownBasisTests.m
tests/Context/: ContextHygieneTests.m  IndexSetTests.m
tests/IO/: LifecycleTests.m
tests/Kinematics/: SymmetricPointTests.m  ThreePointTests.m
tests/Tensors/: GroupTests.m  LinearityTests.m  LorentzTensorTests.m
utils/: common.cmake  get_wolfram_app_dir.m
